tests/paczka1/fuzzy1/76026095.err
Error in line 2: A161 S685 39,5
Error in line 1: qUlf S716 46,8
Error in line 9: 3DaBKO A161 22,1
Error in line 12: IUCEBba2 S685 5,3
Error in line 7: 0G3nU S716 35,6
Error in line 24: 0G3nU S685 35,3
Error in line 25: 0G3nU S716 79,7
